fixed visibility of framework (removed property assignement in style.css)

--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,6 @@ div.rule-container
 
 div.rule-container div
 {
-    min-height: 30px;
     box-sizing: border-box;
 }
 
@@ -56,7 +55,11 @@ div.rule-show
 div.rule-show div
 {
     box-sizing: border-box;
-    margin: 5px;
     width: 50%;
-    background-color: cyan;
+    background-color: #00FFFF;
+}
+
+div.rule-show div:first-child
+{
+    margin: 2px;
 }
